--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.2"
+    "express-session": "^1.18.1",
+    "mongoose": "^8.7.2",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
